# hex

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENCE.txt  README.md  azrac_unit_views.txt  darkelf_unit_views.txt  elf_unit_views.txt  faction_views.txt  human_unit_views.txt  images.txt  lizard_unit_views.txt  machine_unit_views.txt  ship_unit_views.txt  songs.txt  sounds.txt  structure_views.txt  tile_views.txt  ui.txt  unit_views.txt
src/: CMakeLists.txt  COMBAT.md  COMMANDS.md  PROTOCOL.md  README.md  SCRIPTING.md  SERIALISATION.md  UI.md  common.h  main.cpp
src/hex/: CMakeLists.txt  generate.cpp  generate.h  noise.cpp  noise.h  pathfinding.cpp  pathfinding.h
src/hex/ai/: ai.cpp  ai.h  ai_updater.cpp  ai_updater.h
src/hex/audio/: audio.cpp  audio.h
src/hex/basics/: error.cpp  error.h  hexgrid.cpp  hexgrid.h  intset.h  io.h  noise.cpp  objmap.h  point.h  string_vector.cpp  vector2.h
src/hex/chat/: chat.h  chat_updater.cpp  chat_window.cpp
src/hex/game/: end_of_turn.cpp  game.cpp  game.h  game_arbiter.cpp  game_arbiter.h  game_messages.cpp  game_messages.h  game_properties.cpp  game_properties.h  game_serialisation.h  game_updater.cpp  game_updater.h  game_writer.cpp  game_writer.h  level.cpp  message_types.h  movement.cpp  movement.h  pathfinding.cpp  pathfinding.h  properties.cpp  properties.h  property_types.h  trait_types.h  traits.cpp  traits.h  unit_stack.cpp  visibility_map.cpp  visibility_map.h
src/hex/graphics/: font.cpp  font.h  graphics.cpp  graphics.h  hss.cpp  ilb.cpp  ilb.h  load_image.cpp
src/hex/messaging/: checksum.cpp  checksum.h  dispatcher.h  event_pusher.cpp  event_pusher.h  loader.cpp  loader.h  message.cpp  message.h  publisher.cpp  publisher.h  queue.cpp  queue.h  receiver.cpp  receiver.h  serialiser.cpp  serialiser.h  updater.cpp  updater.h  writer.h
src/hex/networking/: client.cpp  connection.cpp  networking.h  server.cpp
src/hex/resources/: image_loader.cpp  image_ref.h  message_types.h  resource_loader.cpp  resource_messages.cpp  resource_messages.h  resources.cpp  resources.h  sound_loader.cpp  sound_ref.h  view_def.h  view_def_serialisation.h
src/hex/ui/: controls.cpp  controls.h  loop.cpp  ui.h  ui_window.cpp
src/hex/view/: audio_renderer.cpp  game_view.cpp  ghost.cpp  level_renderer.cpp  level_renderer.h  level_view.cpp  level_window.cpp  level_window.h  map_window.cpp  map_window.h  message_window.cpp  message_window.h  player.cpp  player.h  pre_updater.cpp  pre_updater.h  stack_window.cpp  stack_window.h  status_window.cpp  status_window.h  tile_painter.cpp  tile_painter.h  unit_info_window.cpp  unit_info_window.h  unit_renderer.cpp  unit_renderer.h  view.h  view_updater.cpp  view_updater.h
src/hexav/: CMakeLists.txt
src/hexav/audio/: audio.cpp  audio.h
src/hexav/graphics/: font.cpp  font.h  graphics.cpp  graphics.h  hss.cpp  ilb.cpp  ilb.h  load_image.cpp  save_image.cpp
src/hexav/resources/: image_loader.cpp  image_ref.h  message_types.h  paint.cpp  paint.h  paint_instructions.cpp  resource_loader.cpp  resource_loader.h  resource_messages.cpp  resource_messages.h  resources.cpp  resources.h  sound_loader.cpp  sound_ref.h
src/hexav/ui/: button.cpp  button.h  controls.cpp  controls.h  loop.cpp  ui.h  ui_window.cpp  window_painter.cpp  window_painter.h
src/hexgame/: CMakeLists.txt
src/hexgame/ai/: ai.cpp  ai.h  ai_updater.cpp  ai_updater.h
src/hexgame/game/: constants.h  end_of_turn.cpp  end_of_turn.h  game.cpp  game.h  game_arbiter.cpp  game_arbiter.h  game_messages.cpp  game_messages.h  game_properties.cpp  game_properties.h  game_serialisation.h  game_updater.cpp  game_updater.h  game_writer.cpp  game_writer.h  level.cpp  message_types.h  property_names.h  throttle.cpp  throttle.h  unit_stack.cpp  visibility_map.cpp  visibility_map.h
src/hexgame/node/: node.h
src/hexutil/: CMakeLists.txt
src/hexutil/basics/: atom.cpp  atom.h  atom_h_template.h  datum.cpp  datum.h  error.h  hexgrid.cpp  hexgrid.h  intset.h  io.h  logging.h  noise.cpp  noise.h  objmap.h  point.h  properties.cpp  properties.h  statistics.cpp  statistics.h  string_pool.cpp  string_pool.h  string_vector.cpp  string_vector.h  term.cpp  term.h  vector2.h
src/hexutil/messaging/: builtin_messages.cpp  builtin_messages.h  checksum.cpp  checksum.h  counter.cpp  counter.h  loader.cpp  loader.h  logger.cpp  logger.h  message.cpp  message.h  message_cpp_template.h  message_h_template.h  message_types.h  publisher.cpp  publisher.h  queue.cpp  queue.h  receiver.cpp  receiver.h  serialiser.cpp  serialiser.h  writer.h
src/hexutil/networking/: client.cpp  connection.cpp  networking.h  server.cpp
src/hexutil/scripting/: builtin_instructions.cpp  compiler.cpp  execution.cpp  scripting.cpp  scripting.h
src/hexview/: CMakeLists.txt
src/hexview/chat/: chat.h  chat_updater.cpp  chat_window.cpp
src/hexview/editor/: brush.cpp  brush.h  editor.cpp  editor.h  palette.cpp  palette.h  structure_brush.cpp  tile_brush.cpp
src/hexview/resources/: image_loader.cpp  message_types.h  paint.cpp  paint.h  paint_instructions.cpp  resource_loader.cpp  resource_loader.h  resource_messages.cpp  resource_messages.h  resources.cpp  resources.h  sound_loader.cpp  view_def.h  view_def_serialisation.h
src/hexview/view/: audio_renderer.cpp  audio_renderer.h  game_view.cpp  ghost.cpp  ghost.h  level_renderer.cpp  level_renderer.h  level_view.cpp  level_window.cpp  level_window.h  map_window.cpp  map_window.h  message_types.h  message_window.cpp  message_window.h  player.cpp  player.h  pre_updater.cpp  pre_updater.h  stack_window.cpp  stack_window.h  status_window.cpp  status_window.h  structure_painter.cpp  tile_painter.cpp  (+22 more)
src/tests/: CMakeLists.txt  battle_test.cpp  command_test.cpp  data_test.cpp  hexgrid_test.cpp  image_test.cpp  messaging_test.cpp  movement_test.cpp  networking_test.cpp  noise_test.cpp  pathfinding_test.cpp  scripting_test.cpp  string_utils_test.cpp  ui_test.cpp  unit_rendering_test.cpp
tests/: CMakeLists.txt  colour_key_conversion_test.c  command_test.cpp  networking_test.cpp  noise_test.cpp  pathfinding_test.cpp
(+107 files in other folders)
